--- a/src/Microsoft.AspNet.Identity.Owin/Microsoft.AspNet.Identity.Owin.csproj
+++ b/src/Microsoft.AspNet.Identity.Owin/Microsoft.AspNet.Identity.Owin.csproj
@@ -9,7 +9,7 @@
     <OutputPath>bin\$(Configuration)</OutputPath>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.AspNet.Identity.Owin</RootNamespace>
-    <AssemblyName>Microsoft.AspNet.Identity.Owin</AssemblyName>
+    <AssemblyName>Microsoft.AspNet.Identity.NetStandard.Owin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -29,7 +29,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>Sdl6.1.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <DocumentationFile>bin\Debug\Microsoft.AspNet.Identity.Owin.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Microsoft.AspNet.Identity.NetStandard.Owin.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,7 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Microsoft.AspNet.Identity.Owin.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Microsoft.AspNet.Identity.NetStandard.Owin.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -107,7 +107,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
